# unimake-rust

./: .gitignore  Cargo.toml  unimake.py
.unimake/: project.py
.unimake/umk/: __init__.pyi  cli.pyi  layout.pyi  project.pyi
code/app/: main.rs
code/unisdk/kit/cli/: decorators.rs  mod.rs
code/unisdk/kit/project/: mod.rs
code/unisdk/kit/py/: signature.rs  utils.rs
code/unisdk/kit/states/: cli.rs  project.rs
code/unisdk/workspace/: cache.rs  interpreter.rs
core/src/: lib.rs
crates/app/: Cargo.toml  cache.rs  cli.rs  interpreter.rs  main.rs  workspace.rs
crates/app/src/: main.rs
crates/application/: Cargo.toml
crates/application/src/: api.rs  cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: project.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/global/: Cargo.toml  lib.rs
crates/global/src/: lib.rs
crates/kit/: Cargo.toml
crates/kit/src/: lib.rs  project.rs  runtime.rs
crates/kit/src/basic/: mod.rs  signature.rs
crates/kit/src/cli/: decorators.rs  mod.rs
crates/kit/src/project/: contributor.rs  decorators.rs  info.rs  mod.rs
crates/kit/src/py/: register.rs  signature.rs  utils.rs  validate.rs
crates/kit/src/states/: cli.rs  mod.rs  vm.rs
crates/plugins/cli/: Cargo.toml  argument.rs  class.rs  command.rs  consts.rs  lib.rs  option.rs  plugin.rs
crates/plugins/core/: Cargo.toml  lib.rs
crates/py/: Cargo.toml
crates/py/src/: lib.rs
crates/sdk/: Cargo.toml  cache.rs  lib.rs  result.rs
crates/sdk/py/: mod.rs  register.rs  signature.rs  utils.rs
crates/types/src/: project.rs  util.rs
crates/umk/: Cargo.toml
crates/umk/src/: cli.rs  lib.rs  result.rs
crates/unimake/: Cargo.toml
crates/unimake/src/: main.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: cache.rs  interpreter.rs  lib.rs  mode.rs
kit/: Cargo.toml
kit/src/: lib.rs  project.rs  state.rs  utils.rs
kit/src/basic/: mod.rs  register.rs  utils.rs
kit/src/cli/: decorators.rs  holder.rs  mod.rs
kit/src/project/: contributor.rs  decorators.rs  info.rs  mod.rs
kit/src/states/: cli.rs  mod.rs  object.rs  project.rs  vm.rs
src/app/: cli.rs
src/sdk/: global.rs  lib.rs
src/sdk/kit/project/: contributor.rs  decorators.rs  info.rs
src/sdk/kit/py/: register.rs
src/sdk/kit/states/: object.rs  vm.rs
src/sdk/umk/: project.rs  result.rs
src/sdk/workspace/: mod.rs  mode.rs
unimake/: Cargo.toml
unimake/src/: cli.rs  main.rs
