[package]
name = "unimake"
version = "0.1.0"
edition = "2024"

[dependencies]
kit = { path = "../kit" }
py = { path = "../py" }
umk = { path = "../umk" }
rustpython = { version = "0.4.0", features = ["default"] }
clap = { version = "4.5.38", features = ["unicode", "string", "derive", "wrap_help"] }
serde = { version = "1.0.219", features = ["derive"] }