[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
umk = { path = "../umk" }
kit = { path = "../kit" }
global = { path = "../global" }
rustpython = { version = "0.4.0", features = ["default"] }
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
