[package]
name = "plugin-cli"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
global = { path = "../../global" }
sdk = { path = "../../sdk" }
plugin = { path = "../../plugins/core" }
rustpython = { version = "0.4.0", features = ["default"] }
rustpython-vm = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
builder-pattern = "0.4.2"
const_format = "0.2.34"
clap = { version = "4.5.38", features = ["unicode", "string", "derive", "wrap_help"] }